[-] BO : fixed overflowing admin sub-tabs in themes flashyturtle and origins

--- a/admin-dev/themes/flashyturtle/admin.css
+++ b/admin-dev/themes/flashyturtle/admin.css
@@ -41,7 +41,7 @@ legend{background:#7AB51D url(thead.png) repeat-x top left;border:1px solid #364
 #menu li.active a{color:#000}
 #submenu{clear:both;color:#666;margin:0;height:38px;padding:0}
 .withLeftBorder{background:transparent url(separator_subnav.png) no-repeat 0 5px}
-#submenu li{display:inline;list-style:none;margin:0;background:transparent url(separator_subnav.png) no-repeat right 0;padding-left:10px;padding-right:10px;margin-top:8px;float:left;height:20px}
+#submenu li{display:inline;list-style:none;margin:0;background:transparent url(separator_subnav.png) no-repeat right 0;padding-left:8px;padding-right:8px;margin-top:8px;float:left;height:20px}
 #submenu li a{text-decoration:underline}
 #menu li{_height:32px;_padding-top:3px}
 #menu li a{_display:inline;_padding:6px 6px 4px}
